// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inputs/IconButton Badge smoke-test 1`] = `
<span data-cy="icon-button-adornment">
  <span data-cy="icon-button-adornment-badge"
        class="MuiBadge-root css-1c32n2y-MuiBadge-root"
  >
    <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
            data-cy="icon-button"
    >
      <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
           focusable="false"
           aria-hidden="true"
           viewbox="0 0 24 24"
           data-testid="AddIcon"
           data-cy="icon-button-icon"
      >
        <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z">
        </path>
      </svg>
      <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
      </span>
    </button>
    <span class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightCircular MuiBadge-overlapCircular MuiBadge-colorSecondary css-z5pebr-MuiBadge-badge">
      8
    </span>
  </span>
</span>
`;

exports[`Inputs/IconButton CustomIcon smoke-test 1`] = `
<button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
        data-cy="icon-button"
>
  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
       focusable="false"
       aria-hidden="true"
       viewbox="0 0 24 24"
       data-testid="StyleIcon"
       data-cy="icon-button-icon"
       style="height: 24px; width: 24px;"
  >
    <path d="m2.53 19.65 1.34.56v-9.03l-2.43 5.86c-.41 1.02.08 2.19 1.09 2.61zm19.5-3.7L17.07 3.98c-.31-.75-1.04-1.21-1.81-1.23-.26 0-.53.04-.79.15L7.1 5.95c-.75.31-1.21 1.03-1.23 1.8-.01.27.04.54.15.8l4.96 11.97c.31.76 1.05 1.22 1.83 1.23.26 0 .52-.05.77-.15l7.36-3.05c1.02-.42 1.51-1.59 1.09-2.6zM7.88 8.75c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-2 11c0 1.1.9 2 2 2h1.45l-3.45-8.34v6.34z">
    </path>
  </svg>
  <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
  </span>
</button>
`;

exports[`Inputs/IconButton Disabled smoke-test 1`] = `
<button class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
        tabindex="-1"
        type="button"
        disabled
        data-cy="icon-button"
>
  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
       focusable="false"
       aria-hidden="true"
       viewbox="0 0 24 24"
       data-testid="AddIcon"
       data-cy="icon-button-icon"
  >
    <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z">
    </path>
  </svg>
</button>
`;

exports[`Inputs/IconButton Primary smoke-test 1`] = `
<button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
        data-cy="icon-button"
>
  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
       focusable="false"
       aria-hidden="true"
       viewbox="0 0 24 24"
       data-testid="AddIcon"
       data-cy="icon-button-icon"
  >
    <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z">
    </path>
  </svg>
  <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
  </span>
</button>
`;

exports[`Inputs/IconButton Rotate smoke-test 1`] = `
<button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
        data-cy="icon-button"
>
  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-gi3h4x-MuiSvgIcon-root"
       focusable="false"
       aria-hidden="true"
       viewbox="0 0 24 24"
       data-testid="AddIcon"
       data-cy="icon-button-icon"
  >
    <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z">
    </path>
  </svg>
  <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
  </span>
</button>
`;

exports[`Inputs/IconButton SizeLarge smoke-test 1`] = `
<button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
        data-cy="icon-button"
>
  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-zifere-MuiSvgIcon-root"
       focusable="false"
       aria-hidden="true"
       viewbox="0 0 24 24"
       data-testid="AddIcon"
       data-cy="icon-button-icon"
  >
    <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z">
    </path>
  </svg>
  <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
  </span>
</button>
`;

exports[`Inputs/IconButton SizeSmall smoke-test 1`] = `
<button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
        data-cy="icon-button"
>
  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-e5efhf-MuiSvgIcon-root"
       focusable="false"
       aria-hidden="true"
       viewbox="0 0 24 24"
       data-testid="AddIcon"
       data-cy="icon-button-icon"
  >
    <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z">
    </path>
  </svg>
  <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
  </span>
</button>
`;

exports[`Inputs/IconButton Styled smoke-test 1`] = `
<button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
        data-cy="icon-button"
        style="background-color: red; color: white;"
>
  <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
       focusable="false"
       aria-hidden="true"
       viewbox="0 0 24 24"
       data-testid="AddIcon"
       data-cy="icon-button-icon"
  >
    <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z">
    </path>
  </svg>
  <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
  </span>
</button>
`;

exports[`Inputs/IconButton Tooltip smoke-test 1`] = `
<span data-cy="icon-button-adornment">
  <span aria-label="add"
        data-cy="icon-button-adornment-tooltip"
        class
        data-mui-internal-clone-element="true"
  >
    <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
            data-cy="icon-button"
    >
      <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
           focusable="false"
           aria-hidden="true"
           viewbox="0 0 24 24"
           data-testid="AddIcon"
           data-cy="icon-button-icon"
      >
        <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z">
        </path>
      </svg>
      <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
      </span>
    </button>
  </span>
</span>
`;
